# Pylang-annotations

./: LICENSE  README.md  pyproject.toml  upload.cmd
src/pylang_annotations/: __init__.py  __init__.pyi  annotations.py  features.py
