[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylang_annotations"
version = "0.0.8"
authors = [
    { name = "xia__mc", email = "xiayichun0512@gmail.com" },
]
description = "The annotations for Pylang project."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/xia-mc/Pylang"
Issues = "https://github.com/xia-mc/Pylang/issues"
